--- a/index.html
+++ b/index.html
@@ -26,17 +26,14 @@
         <a href="./view/referencias.html">Referencias</a>
     </nav>
 
-    <section  class="container my-5">
+    <main class="container my-5">
         <h2>Bienvenido a mi Landing Page</h2>
         <p>¡Hola! Soy <strong>[Tu Nombre]</strong>, un <strong>[tu profesión o área de experiencia]</strong>. Esta es mi Landing Page donde puedes encontrar información sobre mis servicios, proyectos anteriores y experiencias.</p>
         <p>Explora las diferentes secciones utilizando el menú de navegación superior para descubrir más acerca de mí y mi trabajo. Si tienes alguna pregunta o deseas discutir una colaboración, no dudes en <em>contactarme</em> utilizando los detalles de contacto proporcionados.</p>
-    </section>
-
+    </main>
 
     <footer class="bg-dark text-white text-center py-3">
         <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
 </body>
-
 </html>
-
