--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing page App</title>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<title>Landing Page App</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script type="text/javascript"></script>
 <link rel="stylesheet" href="../css/style.css">
 </head>
-
 <body>
     <header class="bg-dark text-white text-center py-3">
         <h1>Landing Page</h1>
     </header>
-
-    <nav class="bg-light p-2">
+    <nav>
         <a href="index.html">Inicio</a>
         <a href="./view/blog.html">Blog</a>
         <a href="./view/sobremi.html">Sobre mí</a>
@@ -25,13 +22,11 @@
         <a href="./view/experiencia.html">Experiencia</a>
         <a href="./view/referencias.html">Referencias</a>
     </nav>
-
     <main class="container my-5">
         <h2>Bienvenido a mi Landing Page</h2>
-        <p>¡Hola! Soy <strong>[Tu Nombre]</strong>, un <strong>[tu profesión o área de experiencia]</strong>. Esta es mi Landing Page donde puedes encontrar información sobre mis servicios, proyectos anteriores y experiencias.</p>
+        <p>¡Hola! Soy <strong>Cristian Jonhson Alvarez</strong>, un <strong>Ingeniero en informatica</strong>. Esta es mi Landing Page donde puedes encontrar información sobre mis servicios, proyectos anteriores y experiencias.</p>
         <p>Explora las diferentes secciones utilizando el menú de navegación superior para descubrir más acerca de mí y mi trabajo. Si tienes alguna pregunta o deseas discutir una colaboración, no dudes en <em>contactarme</em> utilizando los detalles de contacto proporcionados.</p>
     </main>
-
     <footer class="bg-dark text-white text-center py-3">
         <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
