--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
     <header class="bg-dark text-white text-center py-3">
         <h1>Landing Page</h1>
     </header>
-    <nav>
-        <a href="index.html">Inicio</a>
-        <a href="./view/blog.html">Blog</a>
-        <a href="./view/sobremi.html">Sobre mí</a>
-        <a href="./view/portafolio.html">Portafolio</a>
-        <a href="./view/experiencia.html">Experiencia</a>
-        <a href="./view/referencias.html">Referencias</a>
+    <nav class="navbar navbar-expand-md bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link" href="../view/blog.html">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="../view/sobremi.html">Sobre mí</a></li>
+                <li class="nav-item"><a class="nav-link" href="../view/portafolio.html">Portafolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="../view/experiencia.html">Experiencia</a></li>
+                <li class="nav-item"><a class="nav-link" href="../view/referencias.html">Referencias</a></li>
+            </ul>
+        </div>
     </nav>
     <main class="container my-5">
         <h2>Bienvenido a mi Landing Page</h2>
