--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link" href="./view/blog.html">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/blog.html">Blog</a></li>
                 <li class="nav-item"><a class="nav-link" href="./view/sobremi.html">Sobre mí</a></li>
                 <li class="nav-item"><a class="nav-link" href="./view/portafolio.html">Portafolio</a></li>
                 <li class="nav-item"><a class="nav-link" href="./view/experiencia.html">Experiencia</a></li>
