config ruta nav github pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../DWeb_Com43030/css/style.css">
 </head>
 <body>
     <header class="bg-dark text-white text-center py-3">
@@ -22,10 +22,10 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
                 <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="./view/sobremi.html">Sobre mí</a></li>
-                <li class="nav-item"><a class="nav-link" href="./view/portafolio.html">Portafolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="./view/experiencia.html">Experiencia</a></li>
-                <li class="nav-item"><a class="nav-link" href="./view/referencias.html">Referencias</a></li>
+                <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/sobremi.html">Sobre mí</a></li>
+                <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/portafolio.html">Portafolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/experiencia.html">Experiencia</a></li>
+                <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/referencias.html">Referencias</a></li>
             </ul>
         </div>
     </nav>
