add Animacion bounce

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="bg-dark text-white text-center py-3">
-        <h1>Landing Page</h1>
+        <h1 class="animate__animated animate__bounce">Landing Page</h1>
     </header>
     <nav class="navbar navbar-expand-md bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -37,7 +37,7 @@
         <p>Explora las diferentes secciones utilizando el menú de navegación superior para descubrir más acerca de mí y mi trabajo. Si tienes alguna pregunta o deseas discutir una colaboración, no dudes en <em>contactarme</em> utilizando los detalles de contacto proporcionados.</p>
     </main>
     <footer class="bg-dark text-white text-center py-3">
-        <p>Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
+        <p class="animate__animated animate__bounce">Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
