--- a/index.html
+++ b/index.html
@@ -1,43 +1,80 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing Page App</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="src/css/main.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page App</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="src/css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+  </head>
+  <body>
     <header class="bg-dark text-white text-center py-3">
-        <h1 class="animate__animated animate__bounce">Landing Page</h1>
+      <h1 class="animate__animated animate__bounce">Landing Page</h1>
     </header>
     <nav class="navbar navbar-expand-md bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/blog.html">Blog</a></li>
-                <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/sobremi.html">Sobre mí</a></li>
-                <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/portafolio.html">Portafolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/experiencia.html">Experiencia</a></li>
-                <li class="nav-item"><a class="nav-link" href="../DWeb_Com43030/view/referencias.html">Referencias</a></li>
-            </ul>
-        </div>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../view/blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../view/sobremi.html">Sobre mí</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../view/portafolio.html">Portafolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../view/experiencia.html">Experiencia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../view/referencias.html">Referencias</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <main class="container my-5">
+      <section class="intro">
         <h2>Bienvenido a mi Landing Page</h2>
-        <p>¡Hola! Soy <strong>Cristian Jonhson Alvarez</strong>, un <strong>Ingeniero en informatica</strong>. Esta es mi Landing Page donde puedes encontrar información sobre mis servicios, proyectos anteriores y experiencias.</p>
-        <p>Explora las diferentes secciones utilizando el menú de navegación superior para descubrir más acerca de mí y mi trabajo. Si tienes alguna pregunta o deseas discutir una colaboración, no dudes en <em>contactarme</em> utilizando los detalles de contacto proporcionados.</p>
+        <p>
+          ¡Hola! Esta es la página de inicio de mi Landing Page. Aquí puedes
+          encontrar información sobre mis servicios, proyectos anteriores y
+          experiencias.
+        </p>
+        <p>
+          Explora las diferentes secciones utilizando el menú de navegación
+          superior para descubrir más acerca de mí y mi trabajo. Si tienes
+          alguna pregunta o deseas discutir una colaboración, no dudes en
+          <em>contactarme</em> utilizando los detalles de contacto
+          proporcionados.
+        </p>
+      </section>
     </main>
+
     <footer class="bg-dark text-white text-center py-3">
-        <p class="animate__animated animate__bounce">Derechos de autor &copy; 2023. Todos los derechos reservados.</p>
+      <p class="animate__animated animate__bounce">
+        Derechos de autor &copy; 2023. Todos los derechos reservados.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
