--- a/index.html
+++ b/index.html
@@ -57,14 +57,20 @@
       <section class="intro">
         <h2>Bienvenido a mi Landing Page</h2>
         <p>
-          ¡Hola! Esta es la página de inicio de mi Landing Page. Aquí puedes
-          encontrar información sobre mis servicios, proyectos anteriores y
-          experiencias.
+          ¡Hola! Soy <strong>Cristian Jonhson Alvarez</strong>, un
+          <strong>Ingeniero en Informática</strong> con una pasión por la
+          tecnología y una experiencia sólida en desarrollo web y móvil.
         </p>
         <p>
-          Explora las diferentes secciones utilizando el menú de navegación
-          superior para descubrir más acerca de mí y mi trabajo. Si tienes
-          alguna pregunta o deseas discutir una colaboración, no dudes en
+          Mi objetivo es crear soluciones tecnológicas innovadoras que mejoren
+          la vida de las personas. En esta Landing Page, te invito a explorar mi
+          trayectoria, proyectos anteriores y habilidades.
+        </p>
+        <p>
+          Utiliza el menú de navegación superior para descubrir más acerca de mí
+          y mi trabajo. Si tienes alguna pregunta, deseas discutir una
+          colaboración o simplemente quieres charlar sobre tecnología, ¡estaré
+          encantado de escucharte! No dudes en
           <em>contactarme</em> utilizando los detalles de contacto
           proporcionados.
         </p>
